--- a/index.html
+++ b/index.html
@@ -324,16 +324,16 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 <a href="https://webspace.clarkson.edu/~ebollt/" target="_blank">Erik Bollt</a> (Clarkson University)
 </td></tr>
 <tr valign="top"><td>Program Chair: &nbsp;</td><td>
-TBD
+Jeremie Fish
 </td></tr>
 <tr valign="top"><td>Poster Session Chair: &nbsp;</td><td>
-TBD
+Golshan Madraki
 </td></tr>
 <tr valign="top"><td>Logistics Chair: &nbsp;</td><td>
 TBD
 </td></tr>
 <tr valign="top"><td>Publication Chair: &nbsp;</td><td>
-TBD
+Chunlei Liang
 </td></tr>
 <tr valign="top"><td>Education Chair: &nbsp;</td><td>
 TBD
