--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ NERCCS 2023: The Sixth Northeast Regional Conference on Complex Systems will fol
 NERCCS will particularly focus on facilitating the professional growth of early career faculty, postdocs, and students in the region who will likely play a leading role in the field of complex systems science and engineering in the coming years. 
                     </p>
                     <p class="lead">
-<strong>The 2023 conference will be held as an in-person at <a href="https://www.clarkson.edu/" target="_blank">Clarkson University</a> in Potsdam, NY, and online via Zoom.</strong>
+<strong>The 2023 conference will be held as an in-person at <a href="https://www.clarkson.edu/" target="_blank">Clarkson University</a> in Potsdam, NY.</strong>
                     </p>
                 </div>
                 <div class="col-md-4">
