--- a/index.html
+++ b/index.html
@@ -316,6 +316,17 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
 
 <p class="lead" align="center">
+<em>Hotel Information:</em>
+</p>
+
+<table class="lead" align="center">		
+<tr valign="top"><td>Clarkson Inn: &nbsp;</td><td>		
+Room block info here...
+<tr valign="top"><td>Hampton Inn: &nbsp;</td><td>
+<a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
+	
+	
+<p class="lead" align="center">
 <em>Organizing Committee:</em>
 </p>
 
