--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 </p>
 
 <table class="lead" align="center">		
-<tr valign="top"><td>Clarkson Inn: &nbsp;</td><td>		
-Room block info here...
-<tr valign="top"><td>Hampton Inn: &nbsp;</td><td>
+<tr halign="top"><td>Clarkson Inn: &nbsp;</td><td>		
+3/21/23 through 3/25/23, under group code NERCCS.
+<tr halign="top"><td>Hampton Inn: &nbsp;</td><td>
 <a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
 
     <section id="section-organizers" class="section-wrapper gray-bg">
