--- a/index.html
+++ b/index.html
@@ -301,16 +301,26 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
         <!-- /.container -->
     </section>
     <!-- .pricing-section -->
-<p class="lead" align="center">
-<em>Hotel Information:</em>
-</p>
-
+	<section id="" class="section-wrapper gray-bg">
+		<div class="container">
+			<div class ="row">
+				<div class="col-md-12">
+					<div class="section title">
+						<h1>Hotel Information</h1>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
 <table class="lead" align="center">		
 <tr halign="top"><td>Clarkson Inn: &nbsp;</td><td>		
 3/21/23 through 3/25/23, under group code NERCCS.
 <tr halign="top"><td>Hampton Inn: &nbsp;</td><td>
 <a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
-
+					</div>
+				<\div>
+			<\div>
+		<\section>
     <section id="section-organizers" class="section-wrapper gray-bg">
         <div class="container">
             <div class="row">
