--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ We call for submissions for oral and poster presentations on a wide variety of c
                 <div class="col-md-12">
                     <p class="lead">
 Submissions should be made as a single PDF file via 
-<!--<a href="https://easychair.org/conferences/?conf=nerccs2021" target="_blank">-->
+<a href="https://easychair.org/conferences/?conf=nerccs23" target="_blank">
 <b>EasyChair</b>,
-<!--</a>-->
+</a>
 in either <strong>extended abstract format</strong> (1 page, including one figure) or <strong>full paper format</strong> (15 pages max.). 
                     </p>
                     <p class="lead">
