--- a/index.html
+++ b/index.html
@@ -239,6 +239,20 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
+			    <table class="lead" align="center">
+<tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
+<a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
+</td></tr>
+<tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td>
+Jeremie Fish
+</td></tr>
+<tr valign="top"><td>Poster Session Chair: &nbsp;</td><td>
+Golshan Madraki
+</td></tr>
+<tr valign="top"><td>Publication Chair: &nbsp;</td><td>
+Chunlei Liang
+</td></tr>
+</table>
                     </div>
                 </div>
             </div>
@@ -317,7 +331,8 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 3/21/23 through 3/25/23, under group code NERCCS.
 <tr halign="top"><td>Hampton Inn: &nbsp;</td><td>
 <a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
-					</div>
+	<\table>
+					<\div>
 				<\div>
 			<\div>
 		<\section>
