--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 			    <table class="lead" align="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
+	<img "YCL_010622.jpg" alt="YCLai" width="104" height="142">
 </td></tr>
 <tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td>
-Jeremie Fish
 </td></tr>
 <tr valign="top"><td>Poster Session Chair: &nbsp;</td><td>
 Golshan Madraki
