--- a/index.html
+++ b/index.html
@@ -244,13 +244,16 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
 	<img "YCL_010622.jpg" alt="YCLai" width="104" height="142">
 </td></tr>
-<tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td>
+<tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td> 
+	(John's Hopkins University)
 </td></tr>
-<tr valign="top"><td>Poster Session Chair: &nbsp;</td><td>
-Golshan Madraki
+<tr valign="top"><td>Laurent Hebert-Dufresne: &nbsp;</td><td>
+	<a href="http://laurenthebertdufresne.github.io/" target="_blank">Laurent Hebert-Dufresne</a> (University of Vermont)
+
 </td></tr>
-<tr valign="top"><td>Publication Chair: &nbsp;</td><td>
-Chunlei Liang
+<tr valign="top"><td>Mason Porter: &nbsp;</td><td>
+<a href="https://www.math.ucla.edu/~mason/" target="_blank">Mason Porter</a>
+	<img "MAP-photo.jpg" alt="MPorter" width="104" height="142">
 </td></tr>
 </table>
                     </div>
