--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 			    <table class="lead" align="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
-	<img "YCL_010622.jpg" alt="YCLai" width="104" height="142">
+	<img "img/YCL_010622.jpg" alt="YCLai" width="104" height="142">
 </td></tr>
 <tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td> 
 	(John's Hopkins University)
@@ -253,7 +253,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 </td></tr>
 <tr valign="top"><td>Mason Porter: &nbsp;</td><td>
 <a href="https://www.math.ucla.edu/~mason/" target="_blank">Mason Porter</a>
-	<img "MAP-photo.jpg" alt="MPorter" width="104" height="142">
+	<img "img/MAP-photo.jpg" alt="MPorter" width="104" height="142">
 </td></tr>
 </table>
                     </div>
