--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 <a href="https://www.math.ucla.edu/~mason/" target="_blank">Mason Porter</a>
 	<img "img/MAP-photo.jpg" alt="MPorter" width="104" height="142">
 </td></tr>
+<tr valign="top"><td>Krzysztof Fidkowski: &nbsp;</td><td>
+<a href="http://www-personal.umich.edu/~kfid/" target="_blank">Krzysztof Fidkowski</a>
+	<img "img/headshot.jpg" alt="KFid" width="104" height="142">
+</td></tr>				    
 </table>
                     </div>
                 </div>
