--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 			    <table class="lead" align="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
-	<img "img/YCL_010622.jpg" alt="YCLai" width=300>
+	<a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" width=300></a>
 </td></tr>
 <tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td> 
 	(John's Hopkins University)
@@ -253,11 +253,11 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 </td></tr>
 <tr valign="top"><td>Mason Porter: &nbsp;</td><td>
 <a href="https://www.math.ucla.edu/~mason/" target="_blank">Mason Porter</a>
-	<img "img/MAP-photo.jpg" alt="MPorter" width=300>
+	<a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" width=300></a>
 </td></tr>
 <tr valign="top"><td>Krzysztof Fidkowski: &nbsp;</td><td>
 <a href="http://www-personal.umich.edu/~kfid/" target="_blank">Krzysztof Fidkowski</a>
-	<img "img/headshot.jpg" alt="KFid" width=300>
+	<a href="img/headshot.jpg" target="_blank"><img src="img/headshot.jpg" width=300></a>
 </td></tr>				    
 </table>
                     </div>
