--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ More TBD
 </p>
 
 <p class="lead" align="center">
-*** Contact email address TBD ***
+*** Contact email address jafish@clarkson.edu ***
 </p>
 
                 </div>
