--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 
 </td></tr>
 <tr valign="top"><td>Mason Porter: &nbsp;</td><td>
-<a href="https://www.math.ucla.edu/~mason/" target="_blank">Mason Porter</a>
+<a href="https://www.math.ucla.edu/~mason/" target="_blank">For more on Mason Porter</a>
 	<a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" width=300></a>
 </td></tr>
 <tr valign="top"><td>Krzysztof Fidkowski: &nbsp;</td><td>
