--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 			    <table class="lead" align="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
+	<center>
 	<a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a>
+	</center>
 	
 </td></tr>
 <tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td> 
