--- a/index.html
+++ b/index.html
@@ -241,7 +241,10 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
 			    <table class="lead" align="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
-<a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Ying-Cheng Lai</a> (Arizona State University)
+	<br>
+		Arizona State University
+	</br>
+<a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Personal Website</a> 
 	<center>
 	<a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a>
 	</center>
