--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table class="lead" align="center">
+			    <table class="lead" align="center" halign="center">
 <tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 	<br>
 		Arizona State University
