--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
 			    <table class="lead" align="center" halign="center">
-<tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
+<tr valign="top" halign="center"><td>Ying-Cheng Lai: &nbsp;</td><td>
 	<br>
 		Arizona State University
 	</br>
