--- a/index.html
+++ b/index.html
@@ -239,8 +239,22 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table class="lead" align="center" halign="center">
-<tr valign="top" halign="center"><td>Ying-Cheng Lai: &nbsp;</td><td>
+			    <table>
+				    <thead>
+					    <tr>
+						    <th colspan="2">The table
+							    </th>
+						    </tr>
+					    </thead>
+				    <tbody>
+					    <tr>
+						    <td> The table body</td>
+						    <td> With two columns </td>
+						    </tr>
+					    </tbody>
+			    </table>
+			    <table class="lead" align="center">
+<tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
 	<br>
 		Arizona State University
 	</br>
