--- a/index.html
+++ b/index.html
@@ -248,7 +248,12 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 					    </thead>
 				    <tbody>
 					    <tr>
-						    <td> The table body</td>
+						    <td>>Ying-Cheng Lai: 
+						    <br>
+							    Arizona State university
+						    </br>
+					    
+						    </td>
 						    <td> With two columns </td>
 						    </tr>
 					    </tbody>
