--- a/index.html
+++ b/index.html
@@ -248,11 +248,13 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 					    </thead>
 				    <tbody>
 					    <tr>
-						    <td>>Ying-Cheng Lai: 
+						    <td>Ying-Cheng Lai: 
 						    <br>
 							    Arizona State university
 						    </br>
-					    
+					    <br>
+					    <a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Personal Website</a> 
+				    	    </br>
 						    </td>
 						    <td> With two columns </td>
 						    </tr>
