--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table>
+			    <table border=1 width=200>
 				    <thead>
 					    <tr>
-						    <th colspan="2">The table
+						    <th colspan="2">
 							    </th>
 						    </tr>
 					    </thead>
