--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table width=800>
+			    <table width=850>
 				    <thead>
 					    <tr>
 						    <th colspan="2">
@@ -256,6 +256,16 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
+			  <tr>
+						    <td>Mason Porter: 
+						    <br>
+							    UCLA
+						    </br>
+					    <a href=""https://www.math.ucla.edu/~mason/" target="_blank">Personal Website</a> 
+						    </td>
+						    <td> <a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
+						    </tr>
+			
 					    </tbody>
 			    </table>
 			    <table class="lead" align="center">
