--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    <br>
 							    UCLA
 						    </br>
-					    <a href=""https://www.math.ucla.edu/~mason/" target="_blank">Personal Website</a> 
+					    <a href="https://www.math.ucla.edu/~mason/" target="_blank">Personal Website</a> 
 						    </td>
 						    <td> <a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
 						    </tr>
