--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
 						    </tr>
+		 <tr>
+						    <td>Yannis Kevrekidis: 
+						    <br>
+							    Johns Hopkins University
+						    </br>
+					    <a href="https://engineering.jhu.edu/faculty/ioannis-kevrekidis/" target="_blank">Website</a> 
+						    </td>
+						    <td> <a href="img/kevrekidis-yannis.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
+						    </tr>
 			
 					    </tbody>
 			    </table>
