--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
-			<tr> </tr>
+			
 			  <tr>
 						    <td>Mason Porter: 
 						    <br>
@@ -273,7 +273,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </br>
 					    <a href="https://engineering.jhu.edu/faculty/ioannis-kevrekidis/" target="_blank">Website</a> 
 						    </td>
-						    <td> <a href="img/kevrekidis-yannis.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
+						    <td> <a href="img/kevrekidis-yannis.jpg" target="_blank"><img src="img/kevrekidis-yannis.jpg" class="center" width=300></a> </td>
 						    </tr>
 			
 					    </tbody>
