--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table width=850>
+			    <table width=850 height=150>
 				    <thead>
 					    <tr>
 						    <th colspan="2">
