--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
+			<div>
+			</div>
 			
 			  <tr>
 						    <td>Mason Porter: 
