--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>KEYNOTE &amp; INVITED SPEAKERS</h1>
-			    <table width=850 height=150>
+			    <table width=850 border-spacing=100>
 				    <thead>
 					    <tr>
 						    <th colspan="2">
@@ -256,8 +256,6 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
-			<div>
-			</div>
 			
 			  <tr>
 						    <td>Mason Porter: 
