--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
+			<tr height=100px>
+				</tr>
 			
 			  <tr>
 						    <td>Mason Porter: 
@@ -274,6 +276,15 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 					    <a href="https://engineering.jhu.edu/faculty/ioannis-kevrekidis/" target="_blank">Website</a> 
 						    </td>
 						    <td> <a href="img/kevrekidis-yannis.jpg" target="_blank"><img src="img/kevrekidis-yannis.jpg" class="center" width=300></a> </td>
+						    </tr>
+			 <tr>
+						    <td>Laurent Hebert-Dufresne: 
+						    <br>
+							    University of Vermont
+						    </br>
+					    <a href="http://laurenthebertdufresne.github.io/" target="_blank">Website</a> 
+						    </td>
+						    <td> <a href="img/profile.jpg" target="_blank"><img src="img/profile.jpg" class="center" width=300></a> </td>
 						    </tr>
 			
 					    </tbody>
