--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a> </td>
 						    </tr>
-			<tr height=100px>
+			<tr height=20px>
 				</tr>
 			
 			  <tr>
@@ -268,6 +268,8 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
 						    </tr>
+		<tr height=20px>
+			</tr>
 		 <tr>
 						    <td>Yannis Kevrekidis: 
 						    <br>
@@ -277,45 +279,32 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    <td> <a href="img/kevrekidis-yannis.jpg" target="_blank"><img src="img/kevrekidis-yannis.jpg" class="center" width=300></a> </td>
 						    </tr>
+	<tr height=20px>
+		</tr>
 			 <tr>
 						    <td>Laurent Hebert-Dufresne: 
 						    <br>
 							    University of Vermont
 						    </br>
-					    <a href="http://laurenthebertdufresne.github.io/" target="_blank">Website</a> 
+					    <a href="http://laurenthebertdufresne.github.io/" target="_blank">Personal Website</a> 
 						    </td>
 						    <td> <a href="img/profile.jpg" target="_blank"><img src="img/profile.jpg" class="center" width=300></a> </td>
+						    </tr>
+<tr height=20px>
+		</tr>
+			 <tr>
+						    <td>Laurent Hebert-Dufresne: 
+						    <br>
+							    University of Michigan
+						    </br>
+					    <a href="http://www-personal.umich.edu/~kfid/" target="_blank">Personal Website</a> 
+						    </td>
+						    <td> <a href="img/headshot.jpg" target="_blank"><img src="img/headshot.jpg" class="center" width=300></a> </td>
 						    </tr>
 			
 					    </tbody>
 			    </table>
-			    <table class="lead" align="center">
-<tr valign="top"><td>Ying-Cheng Lai: &nbsp;</td><td>
-	<br>
-		Arizona State University
-	</br>
-<a href="http://chaos1.la.asu.edu/~ylai1/" target="_blank">Personal Website</a> 
-	<center>
-	<a href="img/YCL_010622.jpg" target="_blank"><img src="img/YCL_010622.jpg" class="center" width=300></a>
-	</center>
-	
-</td></tr>
-<tr valign="top"><td>Yannis Kevrekidis: &nbsp;</td><td> 
-	(John's Hopkins University)
-</td></tr>
-<tr valign="top"><td>Laurent Hebert-Dufresne: &nbsp;</td><td>
-	<a href="http://laurenthebertdufresne.github.io/" target="_blank">Laurent Hebert-Dufresne</a> (University of Vermont)
-
-</td></tr>
-<tr valign="top"><td>Mason Porter: &nbsp;</td><td>
-<a href="https://www.math.ucla.edu/~mason/" target="_blank">For more on Mason Porter</a>
-	<a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" width=300></a>
-</td></tr>
-<tr valign="top"><td>Krzysztof Fidkowski: &nbsp;</td><td>
-<a href="http://www-personal.umich.edu/~kfid/" target="_blank">Krzysztof Fidkowski</a>
-	<a href="img/headshot.jpg" target="_blank"><img src="img/headshot.jpg" width=300></a>
-</td></tr>				    
-</table>
+			   
                     </div>
                 </div>
             </div>
