--- a/index.html
+++ b/index.html
@@ -366,6 +366,25 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
         </div>
         <!-- /.container -->
 
+ <table width=850 border-spacing=100>
+				    <thead>
+					    <tr>
+						    <th colspan="1">
+							    </th>
+						    </tr>
+					    </thead>
+				    <tbody>	    
+					     <tr>
+						    <td>Clarkson Inn:
+						     </td>
+						     </tr>
+					    <tr>
+						    3/21/23 through 3/25/23, under group code NERCCS.
+					    </tr>
+						    
+					     </tbody>
+			    </table>
+	    
 <table class="lead" align="center">		
 <tr halign="top"><td>Clarkson Inn: &nbsp;</td><td>		
 3/21/23 through 3/25/23, under group code NERCCS.
