--- a/index.html
+++ b/index.html
@@ -369,17 +369,21 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
  <table width=850 border-spacing=100>
 				    <thead>
 					    <tr>
-						    <th colspan="1">
+						    <th colspan="2">
 							    </th>
 						    </tr>
 					    </thead>
 				    <tbody>	    
 					     <tr>
-						    <td>Clarkson Inn:
+						    <td> <td>Clarkson Inn:
 						     </td>
+	 </td>
 						     </tr>
 					    <tr>
+						    <td><td>
 						    3/21/23 through 3/25/23, under group code NERCCS.
+						    </td>
+						    </td>
 					    </tr>
 						    
 					     </tbody>
