--- a/index.html
+++ b/index.html
@@ -375,13 +375,18 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 					    </thead>
 				    <tbody>	    
 					     <tr>
-						    <td> <td>Clarkson Inn:
+						    <td> <td>
+						     <center>
+							     Clarkson Inn:
+						     </center>
 						     </td>
 	 </td>
 						     </tr>
 					    <tr>
 						    <td><td>
+						    <center>
 						    3/21/23 through 3/25/23, under group code NERCCS.
+						    </center>
 						    </td>
 						    </td>
 					    </tr>
