--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
         </div>
         <!-- /.container -->
 
- <table width=850 border-spacing=100>
+ <table width=1000 border-spacing=100>
 				    <thead>
 					    <tr>
 						    <th colspan="2">
@@ -386,6 +386,22 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    <td><td>
 						    <center>
 						    3/21/23 through 3/25/23, under group code NERCCS.
+						    </center>
+						    </td>
+						    </td>
+					    </tr>
+   <tr>
+						    <td><td>
+						    <center>
+						    Hampton Inn:
+						    </center>
+						    </td>
+						    </td>
+					    </tr>
+						       <tr>
+						    <td><td>
+						    <center>
+						   <a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
 						    </center>
 						    </td>
 						    </td>
