--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 3/21/23 through 3/25/23, under group code NERCCS.
 <tr halign="top"><td>Hampton Inn: &nbsp;</td><td>
 <a href="https://www.hilton.com/en/book/reservation/deeplink/?ctyhocn=OGSPCHX&arrivaldate=2023-03-21&departuredate=2023-03-25&srpCodes=LHHNCC" target="_blank">Booking information</a>
-	<\table>
+	</table>
 					
     <section id="section-organizers" class="section-wrapper gray-bg">
         <div class="container">
