--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
         <!-- /.container -->
 
  <table width=1250 border-spacing=100>
-	  <font size="+2"
+	  <font size="+2">
 				    <thead>
 					    <tr>
 						    <th colspan="2">
