--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 <tr height=20px>
 		</tr>
 			 <tr>
-						    <td>Laurent Hebert-Dufresne: 
+						    <td>Krzysztof Fidkowski: 
 						    <br>
 							    University of Michigan
 						    </br>
