--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="jumbotron text-center">
         <div class="content">
-            <div class="event-date"><b>MARCH 22 - 24, 2023 &nbsp; <a href="https://www.clarkson.edu/" target="_blank"><font color="#ffffff">Clarkson University, Potsdam, NY</font></a> &amp; Online</b></div>
+            <div class="event-date"><b>MARCH 22 - 24, 2023 &nbsp; <a href="https://www.clarkson.edu/" target="_blank"><font color="#ffffff">Clarkson University, Potsdam, NY</font></a></b></div>
             <h1>NERCCS 2023:<br>Sixth Northeast Regional Conference on Complex Systems</h1>
 <p><small>Sponsored by <a href="https://sites.google.com/binghamton.edu/css-usne/" target="_blank"><font color="#ffffff"><b>the Complex Systems Society US Northeast Chapter</b></font></a> and <a href="https://www.clarkson.edu/c3s2" target="_blank"><font color="#ffffff"><b>the Clarkson Center for Complex Systems Science (C3S2)</b></font></a>
 </small></p>
