--- a/index.html
+++ b/index.html
@@ -406,6 +406,14 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </td>
 						    </td>
 					    </tr>
+  <tr>
+						    <td><td>
+						    <center>
+						    To obtain the discount, click on the link above, then click on special rates, then click on groups, and add NCC.
+						    </center>
+						    </td>
+						    </td>
+					    </tr>
 						    
 					     </tbody>
 
