--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
   <tr>
 						    <td><td>
 						    <center>
-						    To obtain the discount, click on the link above, then click on special rates, then click on groups, and add NCC.
+						    To obtain the discount, click on the link above, then click on special rates (toward the top of the page), then click in the group code box and add NCC.
 						    </center>
 						    </td>
 						    </td>
