--- a/index.html
+++ b/index.html
@@ -366,18 +366,53 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
         </div>
         <!-- /.container -->
 
- <table width=1250 border-spacing=100  style="font-size:125%">
+ <table width=1250 border-spacing=10  style="font-size:125%">
 				    <thead>
 					    <tr>
 						    <th colspan="2">
 							    </th>
 						    </tr>
 					    </thead>
-				    <tbody>	    
+				    <tbody>
+					    <tr>
+						    <td><td>
+						    <center>
+						    Registration fees:
+						    </center>
+						    </td></td>
+					    </tr>
+					    <tr>
+						    <td><td>
+						    <center>
+						    Industrial participant: $130
+						    </center>
+						    </td></td>
+					    </tr>	
+					    <tr>
+						    <td><td>
+						    <center>
+						    Faculty/Postdoc participant: $100
+						    </center>
+						    </td></td>
+					    </tr>
+					    <tr>
+						    <td><td>
+						    <center>
+						    Student participant: $30
+						    </center>
+						    </td></td>
+					    </tr>
+					    <tr>
+						    <td><td>
+						    <center>
+						    Hotel Information
+						    </center>
+						    </td></td>
+					    </tr>
 					     <tr>
 						    <td> <td>
 						     <center>
-							     Clarkson Inn:
+						     Clarkson Inn:
 						     </center>
 						     </td>
 	 </td>
