--- a/index.html
+++ b/index.html
@@ -369,6 +369,15 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    <td><td>
 						    <center>
 						    <b>	    
+						    <a href="https://easychair.org/my/conference?conf=nerccs23" target="_blank">Register here</a>
+							    </b>
+						    </center>
+						    </td></td>
+					    </tr>					    
+					    <tr>
+						    <td><td>
+						    <center>
+						    <b>	    
 						    Registration fees:
 							    </b>
 						    </center>
