--- a/index.html
+++ b/index.html
@@ -258,6 +258,18 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </tr>
 			<tr height=20px>
 				</tr>
+			 <tr>
+						    <td>Yu-Ru Lin: 
+						    <br>
+							    Univeristy of Pittsburgh
+						    </br>
+					    <a href="http://www.yurulin.com/" target="_blank">Personal Website</a> 
+						    </td>
+						    <td> <a href="img/MAP-photo.jpg" target="_blank"><img src="img/MAP-photo.jpg" class="center" width=300></a> </td>
+						    </tr>
+		<tr height=20px>
+			</tr>
+			
 			
 			  <tr>
 						    <td>Mason Porter: 
