--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    </br>
 					    <a href="http://www.yurulin.com/" target="_blank">Personal Website</a> 
 						    </td>
-						    <td> <a href="img/yurulin_talkc.jpg" target="_blank"><img src="img/yurulin_talkc.jpg" class="center" width=300></a> </td>
+						    <td> <a href="img/yurulin_talka.jpg" target="_blank"><img src="img/yurulin_talka.jpg" class="center" width=300></a> </td>
 						    </tr>
 		<tr height=20px>
 			</tr>
