--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                     </p>
                     <p class="lead">
 <table>
-<tr><td class="lead">Full paper submission deadline: &nbsp;</td><td class="lead"><b>February 1, 2023</b></td><tr>
+<tr><td class="lead">Full paper submission deadline EXTENDED: &nbsp;</td><td class="lead"><b>February 15, 2023</b></td><tr>
 <tr><td class="lead">Full paper notification to authors: &nbsp;</td><td class="lead"><b>February 28, 2023</b></td><tr>
 <tr><td class="lead">Extended abstract submission deadline: &nbsp;</td><td class="lead"><b>March 1, 2023</b></td><tr>
 <tr><td class="lead">Extended abstract notification to authors: &nbsp;</td><td class="lead"><b>March 8, 2023</b></td><tr>
