--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Submissions should be made as a single PDF file via
 in either <strong>extended abstract format</strong> (1 page, including one figure) or <strong>full paper format</strong> (15 pages max.). 
                     </p>
                     <p class="lead">
-<strong>Full paper submission has an earlier deadline to allow for rigorous full-paper peer reviews, and if accepted, the papers will be published in <a href="http://orb.binghamton.edu/nejcs/" target="_blank"><em>Northeast Journal of Complex Systems (NEJCS)</em></a> by the time of the conference (free of charge).</strong> Interested authors can contact the Publication Chairs <!--(<a href="mailto:bricca@sjfc.edu,ggeorgiev@assumption.edu">Barney Ricca and Georgi Georgiev</a>)-->.
+<strong>Full paper submission has an earlier deadline to allow for rigorous full-paper peer reviews, and if accepted, the papers will be published in <a href="http://orb.binghamton.edu/nejcs/" target="_blank"><em>Northeast Journal of Complex Systems (NEJCS) </em></a> after the peer review process has been completed (free of charge). Review for a poster/talk designation will be handled separately.</strong> Interested authors can contact the Publication Chairs <!--(<a href="mailto:bricca@sjfc.edu,ggeorgiev@assumption.edu">Barney Ricca and Georgi Georgiev</a>)-->.
                     </p>
 <!--
                     <p class="lead">
@@ -218,10 +218,9 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                     <p class="lead">
 <table>
 <tr><td class="lead">Full paper submission deadline EXTENDED: &nbsp;</td><td class="lead"><b>February 15, 2023</b></td><tr>
-<tr><td class="lead">Full paper notification to authors: &nbsp;</td><td class="lead"><b>February 28, 2023</b></td><tr>
+<tr><td class="lead">Full paper notification of poster/talk designation to authors: &nbsp;</td><td class="lead"><b>March 2, 2023</b></td><tr>
 <tr><td class="lead">Extended abstract submission deadline: &nbsp;</td><td class="lead"><b>March 1, 2023</b></td><tr>
 <tr><td class="lead">Extended abstract notification to authors: &nbsp;</td><td class="lead"><b>March 8, 2023</b></td><tr>
-<tr><td class="lead">Revision deadline: &nbsp;</td><td class="lead"><b>March 15, 2023</b></td><tr>
 <tr><td class="lead">Registration deadline: &nbsp;</td><td class="lead"><b>March 20, 2023</b></td><tr>
 <tr><td class="lead">Conference: &nbsp;</td><td class="lead"><b>March 22 - 24, 2023</b></td><tr>
 </table>
