--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
 						    <td><td>
 						    <center>
 						    <b>	    
-						    <a href="https://easychair.org/my/conference?conf=nerccs23" target="_blank">Register here</a>
+						   Registration is handled through the easychair website <a href="https://easychair.org/my/conference?conf=nerccs23" target="_blank">Register here</a>. Please note you may have to "change role" to see the registration link after clicking on the registration link.
 							    </b>
 						    </center>
 						    </td></td>
