--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h4>TBD</h4>
+                        <h4><a href="nerccs2023program-FINAL.docx.pdf" target="_blank"><img src="img/nerccs2023program-FINAL.docx.pdf" class="center" width=300></a></h4>
                     </div>
                 </div>
             </div>
