--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h4><iframe src="nerccs2023program-FINAL.docx.pdf" width=100% height=500px></iframe></h4>
+                        <h4><iframe src="img/nerccs2023program-FINAL.docx.pdf" width=100% height=500px></iframe></h4>
                     </div>
                 </div>
             </div>
