--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@ in either <strong>extended abstract format</strong> (1 page, including one figur
 <u><b><a href="https://easychair.org/conferences/?conf=nerccs2021" target="_blank">Click here to log in to EasyChair</a></b></u>
                     </p>
 -->
-                    <p class="lead">
+<!--                    <p class="lead">
 <b>Best Oral Presentation / Best Poster (Interactive Presentation) Awards:</b>
 NERCCS 2023 will offer the Best Oral Presentation and Best Poster Awards. The winner will be selected from accepted papers and posters by the judge panel, which will be recognized with a certificate at the conference. 
                     </p>
+-->
 
 <!--
                     <p class="lead">
