--- a/index.html
+++ b/index.html
@@ -348,7 +348,10 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
                 <div class="col-md-12">
                     <div class="section-title">
                       <h4><iframe src="img/nerccs2023program-FINAL.docx.pdf" width=100% height=500px></iframe></h4> 
+			    <h1>PARKING</h1>
 			<h4><iframe src="img/NERCCS Map.pdf" width=100% height=500px></iframe> </h4>    
+			    <h1>FOOD</h1>
+			    <h4><iframe src="img/Potsdam chamber food choices PDF edit.pdf" width=100% height=500px></iframe></h4>
                     </div>
                 </div>
             </div>
