--- a/index.html
+++ b/index.html
@@ -347,9 +347,11 @@ Yanchen Liu: <i>"Approximate network symmetry"</i><br>
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                      <h4><iframe src="img/nerccs2023program-FINAL.docx.pdf" width=100% height=500px></iframe></h4> 
+                      <h4><iframe src="img/nerccs2023program-FINAL.docx (1).pdf" width=100% height=500px></iframe></h4> 
+			    <p></p>
 			    <h1>PARKING</h1>
-			<h4><iframe src="img/NERCCS Map.pdf" width=100% height=500px></iframe> </h4>    
+			<h4><iframe src="img/NERCCS Map.pdf" width=100% height=500px></iframe> </h4> 
+			    <p></p>
 			    <h1>FOOD</h1>
 			    <h4><iframe src="img/Potsdam chamber food choices PDF edit.pdf" width=100% height=500px></iframe></h4>
                     </div>
